crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_circular_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_circular_reference/main.py
---
import sys, types
def __cribo_init___cribo_ac4932_first():
    if '__cribo_ac4932_first' in sys.modules:
        return sys.modules['__cribo_ac4932_first']
    module = types.ModuleType('__cribo_ac4932_first')
    module.__file__ = '/Volumes/workplace/GitHub/ophidiarium/cribo/crates/cribo/tests/fixtures/bundling/xfail_stickytape_circular_reference/first.py'
    sys.modules['__cribo_ac4932_first'] = module
    sys.modules['first'] = module
    second = sys.modules['second']
    module.second = second
    return module
def __cribo_init___cribo_0d4b36_second():
    if '__cribo_0d4b36_second' in sys.modules:
        return sys.modules['__cribo_0d4b36_second']
    module = types.ModuleType('__cribo_0d4b36_second')
    module.__file__ = '/Volumes/workplace/GitHub/ophidiarium/cribo/crates/cribo/tests/fixtures/bundling/xfail_stickytape_circular_reference/second.py'
    sys.modules['__cribo_0d4b36_second'] = module
    sys.modules['second'] = module
    first = sys.modules['first']
    module.first = first
    return module
__cribo_modules = {'first': '__cribo_ac4932_first', 'second': '__cribo_0d4b36_second'}
__cribo_init_functions = {'__cribo_ac4932_first': __cribo_init___cribo_ac4932_first, '__cribo_0d4b36_second': __cribo_init___cribo_0d4b36_second}
class CriboBundledFinder:

    def __init__(self, module_registry, init_functions):
        self.module_registry = module_registry
        self.init_functions = init_functions

    def find_spec(self, fullname, path, target=None):
        if fullname in self.module_registry:
            synthetic_name = self.module_registry[fullname]
            if synthetic_name not in sys.modules:
                init_func = self.init_functions.get(synthetic_name)
                if init_func:
                    init_func()
            import importlib.util
            return importlib.util.find_spec(synthetic_name)
        return None
sys.meta_path.insert(0, CriboBundledFinder(__cribo_modules, __cribo_init_functions))
__cribo_init___cribo_ac4932_first()
__cribo_init___cribo_0d4b36_second()
first = sys.modules['first']
print("Hello")
