crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_implicit_init_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_implicit_init_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys, types
def __cribo_init___cribo_e3b0c4_greetings_irrelevant():
    if '__cribo_e3b0c4_greetings_irrelevant' in sys.modules:
        return sys.modules['__cribo_e3b0c4_greetings_irrelevant']
    module = types.ModuleType('__cribo_e3b0c4_greetings_irrelevant')
    module.__file__ = '/Volumes/workplace/GitHub/ophidiarium/cribo/crates/cribo/tests/fixtures/bundling/xfail_stickytape_implicit_init_import/greetings/irrelevant.py'
    sys.modules['__cribo_e3b0c4_greetings_irrelevant'] = module
    sys.modules['greetings.irrelevant'] = module
    return module
__cribo_modules = {'greetings.irrelevant': '__cribo_e3b0c4_greetings_irrelevant'}
__cribo_init_functions = {'__cribo_e3b0c4_greetings_irrelevant': __cribo_init___cribo_e3b0c4_greetings_irrelevant}
class CriboBundledFinder:

    def __init__(self, module_registry, init_functions):
        self.module_registry = module_registry
        self.init_functions = init_functions

    def find_spec(self, fullname, path, target=None):
        if fullname in self.module_registry:
            synthetic_name = self.module_registry[fullname]
            if synthetic_name not in sys.modules:
                init_func = self.init_functions.get(synthetic_name)
                if init_func:
                    init_func()
            import importlib.util
            return importlib.util.find_spec(synthetic_name)
        return None
sys.meta_path.insert(0, CriboBundledFinder(__cribo_modules, __cribo_init_functions))
message = "Hello"
__cribo_init___cribo_e3b0c4_greetings_irrelevant()
greetings.irrelevant = sys.modules['greetings.irrelevant']
print(greetings.message)
