crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_import_from_as_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_import_from_as_module/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

message = "Hello"
g = types.SimpleNamespace()
print(g.message)
